# jobsearch-mcp-aws

./: .gitignore  README.md  pyproject.toml  requirements.txt
.amazonq/rules/memory-bank/: guidelines.md  product.md  structure.md  tech.md
cloudformation/: main.yaml
scripts/: deploy-cfn.sh
src/: server.py
